Prevent screen from moving on iPhone 8 size

--- a/static/styles.css
+++ b/static/styles.css
@@ -39,6 +39,7 @@ a {
     margin-bottom: 10px;
     font-weight: 700;
     font-size: 16px;
+    min-height: 26px;
     letter-spacing: 0.2rem;
     text-transform: uppercase;
     text-align: center;
